@@ -1,3 +1,5 @@
+* #4796 Ignore failure to chmod files in usb sticks. (tomeu)
+
 Snapshot 62a5c30d81
 
 * Copy files to the profile dir when asked by an out-of-container process. (tomeu)
